hard-gists/c8eb9d0938584a277f90/run.log
=== Docker Run Log for c8eb9d0938584a277f90 ===
Started at: Mi 29. Okt 20:08:52 CET 2025

[2025-10-29 20:08:52] START: Running container for c8eb9d0938584a277f90
[2025-10-29 20:08:53] SUCCESS: Container 0625bbd516a6ffff7cd8daaec63ac61ca982d20b80ccaa705eaf76c6a61e8dea started for c8eb9d0938584a277f90
=== Container logs for c8eb9d0938584a277f90 ===
  File "/snippet.py", line 18
    print "%s misses the following glyphs compared to %s:" % (f2, f1)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c8eb9d0938584a277f90 ===
[2025-10-29 20:08:55] INFO: Container 0625bbd516a6ffff7cd8daaec63ac61ca982d20b80ccaa705eaf76c6a61e8dea has stopped
